--- a/templates/base.html
+++ b/templates/base.html
@@ -16,7 +16,11 @@
     <li><a href="/markets">Markets</a></li>
     <li><a href="/portfolio">Portfolio</a></li>
     <li><a href="/news">News</a></li>
+    {% if current_user.is_authenticated %}
+    <li><a href="/logout">Logout</a></li>
+    {% else %}
     <li><a href="/login">Login</a></li>
+    {% endif %}
   </ul>
 </nav>
 
